# notebooks

./: README.md  mint_amd_notebooks.py  pyproject.toml  update_all_notebooks.py
nb/: AMD-Advanced_Llama3_1_(3B)_GRPO_LoRA.ipynb  AMD-Advanced_Llama3_2_(3B)_GRPO_LoRA.ipynb  AMD-All_MiniLM_L6_v2.ipynb  AMD-BGE_M3.ipynb  AMD-CodeForces-cot-Finetune_for_Reasoning_on_CodeForces.ipynb  AMD-CodeGemma_(7B)-Conversational.ipynb  AMD-DeepSeek_R1_0528_Qwen3_(8B)_GRPO.ipynb  AMD-Deepseek_OCR_(3B)-Eval.ipynb  AMD-Deepseek_OCR_(3B)-Evaluation.ipynb  AMD-Deepseek_OCR_(3B).ipynb  AMD-Deepseek_OCR_2_(3B).ipynb  AMD-ERNIE_4_5_21B_A3B_PT-Conversational.ipynb  AMD-ERNIE_4_5_VL_28B_A3B_PT_Vision.ipynb  AMD-EmbeddingGemma_(300M).ipynb  AMD-Falcon_H1_(0.5B)-Alpaca.ipynb  AMD-FunctionGemma_(270M).ipynb  AMD-GPT_OSS_BNB_(20B)-Inference.ipynb  AMD-GPT_OSS_MXFP4_(20B)-Inference.ipynb  AMD-Gemma2_(2B)-Alpaca.ipynb  AMD-Gemma2_(9B)-Alpaca.ipynb  AMD-Gemma3N_(2B)-Inference.ipynb  AMD-Gemma3N_(4B)-Audio.ipynb  AMD-Gemma3N_(4B)-Conversational.ipynb  AMD-Gemma3N_(4B)-Vision.ipynb  AMD-Gemma3_(1B)-GRPO.ipynb  AMD-Gemma3_(270M).ipynb  AMD-Gemma3_(27B)_A100-Conversational.ipynb  AMD-Gemma3_(4B)-Vision-GRPO.ipynb  AMD-Gemma3_(4B)-Vision.ipynb  AMD-Gemma3_(4B).ipynb  AMD-Gemma4_(26B_A4B)-Text.ipynb  AMD-Gemma4_(26B_A4B)-Vision.ipynb  AMD-Gemma4_(31B)-Text.ipynb  AMD-Gemma4_(31B)-Vision.ipynb  AMD-Gemma4_(E2B)-Audio.ipynb  AMD-Gemma4_(E2B)-Text.ipynb  AMD-Gemma4_(E2B)-Vision.ipynb  AMD-Gemma4_(E2B)_GRPO.ipynb  AMD-Gemma4_(E2B)_Reinforcement_Learning_2048_Game.ipynb  (+262 more)
original_template/: gpt-oss-(20B)-GRPO.ipynb  (+2 more)
(+151 files in other folders)
